crates/toml/tests/snapshots/invalid/string/bad-escape-05.stderr
TOML parse error at line 1, column 13
  |
1 | a = "a \\\\\ b"
  |             ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
